--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,7 @@ abbr {
 
 .btn{
     display: inline-block;
-    border: solid 1px var(--success);
+    border: solid 1px var(--light);
     width: 8em;
     padding-left: 1em;
     padding-right: 1em;
@@ -129,5 +129,13 @@ header nav ul li {
 */
 .margin-right {
     margin-right: 0.5em;
+
+}
+
+
+@media screen and (max-width: 576px){
+    .flex-container {
+        flex-direction: column;
+    }
 
 }
